--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   }
     
   function openScript() {
-     window.location.href = 'AutoCrateFree.lua'
+     window.location.href = 'scripts\\AutoCrateFree.lua'
   }
 
   function openVersion() {
