--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cashfarm</title>
+    <title>cashfarm.xyz</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.ico" type="image/x-icon">
     <meta name="author" content="Akyalw discord: akyalw">
@@ -21,7 +21,7 @@
 
     <div class="main-section">
         <h1 class="main-title">
-            <span>cashfarm.xyz</span>
+            <span>Cashfarm</span>
         </h1>
         <p class="description">Cash Farm is the #1 autofarm script available on roblox jailbreak.</p>
     </div>
@@ -33,7 +33,7 @@
             <p>Welcome to Cash Farm! Our script is designed to optimize your gameplay in Roblox Jailbreak, allowing you to maximize your earnings effortlessly. With our advanced features, you can enjoy a seamless gaming experience without the hassle of manual farming. Join our community of satisfied users and take your game to the next level!</p>
         </div>
     </div>
-    <h2 id="features" class="centered-title">Features [Premium]</h2>
+    <h2 id="features" class="centered-title">Features ( Premium )</h2>
 
     <div class="features-section">
         <div class="feature-box">
