--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cashfarm.xyz</title>
+    <title>Cash Farm</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.ico" type="image/x-icon">
     <meta name="author" content="Akyalw discord: akyalw">
@@ -21,7 +21,7 @@
 
     <div class="main-section">
         <h1 class="main-title">
-            <span>Cash Farm</span>
+            <span>cashfarm.xyz</span>
         </h1>
         <p class="description">Cash Farm is the #1 autofarm script available on roblox jailbreak.</p>
     </div>
