--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2 id="about" class="centered-title">About</h2>
 
     <div class="about-section" style="display: flex; justify-content: space-between; align-items: center; margin: 50px auto; max-width: 60vw;">
-        <img id="menuImage" src="assets/menu.png" alt="Menu" style="opacity: 1; transition: opacity 1s;">
+        <img id="menuImage" src="assets/menu1.png" alt="Menu" style="opacity: 1; transition: opacity 1s;">
         <div class="about-text">
             <p>Welcome to Cash Farm! Our script is designed to optimize your gameplay in Roblox Jailbreak, allowing you to maximize your earnings effortlessly. With our advanced features, you can enjoy a seamless gaming experience without the hassle of manual farming. Join our community of satisfied users and take your game to the next level!</p>
         </div>
