--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Welcome to Cash Farm! Our script is designed to optimize your gameplay in Roblox Jailbreak, allowing you to maximize your earnings effortlessly. With our advanced features, you can enjoy a seamless gaming experience without the hassle of manual farming. Join our community of satisfied users and take your game to the next level!</p>
         </div>
     </div>
-    <h2 id="features" class="centered-title">Features ( Premium )</h2>
+    <h2 id="features" class="centered-title">Features [Premium]</h2>
 
     <div class="features-section">
         <div class="feature-box">
