--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="main-section">
         <h1 class="main-title">
-            <span>cashfarm.xyz</span>
+            <span>cashfarm.lol</span>
         </h1>
         <p class="description">Cash Farm is the #1 autofarm script available on roblox jailbreak.</p>
     </div>
