--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.ico" type="image/x-icon">
     <meta name="author" content="Akyalw discord: akyalw">
+
+    <meta property="og:title" content="#1 Jailbreak Script"> 
+    <meta property="og:description" content="https://cashfarm.lol">
 </head>
 <body>
     <nav class="navbar">
