--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Akyalw discord: akyalw">
 
     <meta property="og:title" content="#1 Jailbreak Script"> 
-    <meta property="og:description" content="https://cashfarm.lol">
+    <meta property="og:description" content="https://discord.gg/getcash">
 </head>
 <body>
     <nav class="navbar">
