--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="#1 Jailbreak Script"> 
     <meta property="og:description" content="https://discord.gg/getcash">
-    <meta name="theme-color" content="#ff5733">
+    <meta name="theme-color" content="#00FFA1">
 </head>
 <body>
     <nav class="navbar">
