--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Akyalw discord: akyalw">
 
     <meta property="og:title" content="#1 Jailbreak Script"> 
-    <meta property="og:description" content="https://discord.gg/getcash">
+    <meta property="og:description" content="discord.gg/getcash">
     <meta name="theme-color" content="#00FFA1">
 </head>
 <body>
