--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Akyalw discord: akyalw">
 
     <meta property="og:title" content="#1 Jailbreak Script"> 
-    <meta property="og:description" content="discord.gg/getcash">
+    <meta property="og:description" content="discord.gg/cashfarm">
     <meta name="theme-color" content="#00FFA1">
 </head>
 <body>
@@ -80,24 +80,24 @@
         <div class="pricing-box">
             <h3 class="pricing-title">1 Week</h3>
             <p class="pricing-price">$1.75</p>
-            <a href="https://discord.gg/getcash" class="buy-button">Buy</a>
+            <a href="https://discord.gg/cashfarm" class="buy-button">Buy</a>
         </div>
         <div class="pricing-box">
             <h3 class="pricing-title">1 Month</h3>
             <p class="pricing-price">$5</p>
-            <a href="https://discord.gg/getcash" class="buy-button">Buy</a>
+            <a href="https://discord.gg/cashfarm" class="buy-button">Buy</a>
         </div>
         <div class="pricing-box">
             <h3 class="pricing-title">Lifetime</h3>
             <p class="pricing-price">$10</p>
-            <a href="https://discord.gg/getcash" class="buy-button">Buy</a>
+            <a href="https://discord.gg/cashfarm" class="buy-button">Buy</a>
         </div>
     </div>
 
     <div id="support" class="support-section">
         <h2 class="centered-title">Need Support?</h2>
         <p>If you need any assistance, feel free to join our Discord community by clicking the button below:</p>
-        <a href="https://discord.gg/getcash" class="buy-button" style="padding: 12px; margin-top: 30px;">Join Discord</a>
+        <a href="https://discord.gg/cashfarm" class="buy-button" style="padding: 12px; margin-top: 30px;">Join Discord</a>
     </div>
 
     <div class="footer">
