--- a/key.html
+++ b/key.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Farm</title>
-    <link rel="stylesheet" href="styles/KeyStyle">
+    <link rel="stylesheet" href="styles/KeyStyle.css">
     <link rel="icon" href="icon.ico" type="image/x-icon">
     <meta name="author" content="Akyalw discord: akyalw">
     <meta property="og:title" content="#1 Jailbreak Script">
